# personal-kb

./: .env.example  .gitignore  CLAUDE.md  README.md  api.py  main.py  pyproject.toml
.claude/: settings.local.json
data/notes/: machine_learning_notes.txt  meeting_2024_01.txt  project_alpha.txt  recipe_sourdough.txt
eval_results/: baseline_comparison.json
src/: __init__.py  agent.py  config.py  document_loader.py  embeddings.py  memory.py  models.py  pipeline.py  tracing.py  vectorstore.py
src/agents/: __init__.py  guard.py  orchestrator.py  research.py  retrieval.py
src/loaders/: __init__.py  bookmark_loader.py  notes_loader.py
tests/: conftest.py
tests/evals/: baseline_agent.py  eval_answer_quality.py  eval_baseline_comparison.py  eval_bookmarks.py  eval_guardrails.py  eval_memory.py  eval_retrieval_accuracy.py  eval_semantic_relevance.py
tests/unit/: test_agent_validation.py  test_api.py  test_bookmark_loader.py  test_chunking.py  test_embeddings.py  test_file_loading.py  test_guard_agent.py  test_memory.py  test_qdrant_ops.py  test_research_agent.py  test_retrieval_agent.py
